--- a/src/main/yamcs/etc/yamcs.yamcs-cfs.yaml
+++ b/src/main/yamcs/etc/yamcs.yamcs-cfs.yaml
@@ -55,8 +55,9 @@ dataLinks:
     
   - name: ds-logs
     class: com.windhoverlabs.yamcs.cfs.ds.CfsDsPlugin
+    stream: tm_realtime
     args:
-      buckets: ["cfdpDown"]
+      buckets: ["cfdpDown","cfdpUp"]
       packetPreprocessorClassName: org.yamcs.tctm.cfs.CfsPacketPreprocessor
       packetPreprocessorArgs:
         byteOrder: LITTLE_ENDIAN
@@ -75,8 +76,11 @@ mdb:
     # Valid loaders are: sheet, xtce or fully qualified name of the class
     - type: "xtce"
       spec: "mdb/cfs-ccsds.xml"
-    - type: "xtce"
-      spec: "mdb/cfs.xml"
+      subLoaders:
+        - type: "xtce"
+          spec: "mdb/cpd.xml"
+        - type: "xtce"
+          spec: "mdb/ppd.xml"
 
 # Configuration for streams created at server startup
 streamConfig:
