--- a/src/main/yamcs/etc/yamcs.yamcs-cfs.yaml
+++ b/src/main/yamcs/etc/yamcs.yamcs-cfs.yaml
@@ -56,20 +56,23 @@ dataLinks:
   - name: ds-logs
     class: com.windhoverlabs.yamcs.cfs.ds.CfsDsPlugin
     stream: tm_realtime
-    args:
-      buckets: ["cfdpDown","cfdpUp"]
-      packetPreprocessorClassName: org.yamcs.tctm.cfs.CfsPacketPreprocessor
-      packetPreprocessorArgs:
-        byteOrder: LITTLE_ENDIAN
-        #            useLocalGenerationTime: true
-        #errorDetection:
-        #tcoService:
-        timestampFormat: CFE_SB_TIME_32_16_SUBS
-        timeEncoding:
-          useLocalGenerationTime: false
-          epoch: CUSTOM
-          epochUTC: "1970-01-01T00:00:00Z"
-          timeIncludesLeapSeconds: false
+    buckets: ["cfdpDown","cfdpUp"]
+    DS_FILE_HDR_SUBTYPE: 12345
+    DS_TOTAL_FNAME_BUFSIZE: 64
+    ignoreInitial: false
+    clearBucketsAtStartup: false
+    deleteFileAfterProcessing: false
+    pollingPeriod: 10
+    packetPreprocessorClassName: org.yamcs.tctm.cfs.CfsPacketPreprocessor
+    packetPreprocessorArgs:
+      byteOrder: LITTLE_ENDIAN
+      timestampFormat: CFE_SB_TIME_32_16_SUBS
+      timeEncoding:
+        useLocalGenerationTime: false
+        epoch: CUSTOM
+        epochUTC: "1970-01-01T00:00:00Z"
+        timeIncludesLeapSeconds: false
+      
 
 mdb:
     # Configuration of the active loaders
