--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,9 @@ jobs:
       - uses: actions/setup-java@v1
         with:
           java-version: 11
+      - name: Check coding style
+        run: |
+          mvn fmt:check
       - name: Build
         run: mvn -B package
 
