--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.windhoverlabs</groupId>
-	<artifactId>yamcs-cfs-ds</artifactId>
+	<artifactId>yamcs-cfs-evs</artifactId>
 	<version>1.0.0</version>
 
 	<packaging>jar</packaging>
-	<name>YAMCS plugin for the Core Flight System (CFS) Data Storage (DS) application.</name>
+	<name>YAMCS plugin for the Core Flight System (CFS) Event Services (EVS) application.</name>
 
 	<properties>
 		<yamcsVersion>5.6.2</yamcsVersion>
