--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,11 +17,11 @@ jobs:
       - name: Build
         run: mvn -B package
 
-      - name: Coveralls report
-        env:
-          COVERALLS_TOKEN: ${{ secrets.COVERALLS_TOKEN }}
-        run: |
-          mvn install jacoco:report coveralls:report -DrepoToken=$COVERALLS_TOKEN
+      # - name: Coveralls report
+      #   env:
+      #     COVERALLS_TOKEN: ${{ secrets.COVERALLS_TOKEN }}
+      #   run: |
+      #     mvn install jacoco:report coveralls:report -DrepoToken=$COVERALLS_TOKEN
   docs:
     name: Documentation
     runs-on: ubuntu-latest
